--- a/src/DotArguments/DotArguments.csproj
+++ b/src/DotArguments/DotArguments.csproj
@@ -33,6 +33,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Attributes\ArgumentAttribute.cs" />
+    <Compile Include="Attributes\NamedSwitchArgumentAttribute.cs" />
+    <Compile Include="Attributes\NamedValueArgumentAttribute.cs" />
+    <Compile Include="Attributes\PositionalArgumentAttribute.cs" />
+    <Compile Include="Attributes\PositionalValueArgumentAttribute.cs" />
+    <Compile Include="Attributes\RemainingArgumentsAttribute.cs" />
+    <Compile Include="Attributes\NamedArgumentAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Attributes\" />
+  </ItemGroup>
 </Project>
