--- a/src/DotArguments.Tests/DotArguments.Tests.csproj
+++ b/src/DotArguments.Tests/DotArguments.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TestContainers\CorruptArgumentContainer8.cs" />
     <Compile Include="TestContainers\ArgumentContainer4.cs" />
     <Compile Include="TestContainers\CorruptArgumentContainer9.cs" />
+    <Compile Include="ArgumentParserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TestContainers\" />
