Make short name optional

--- a/src/DotArguments.Tests/DotArguments.Tests.csproj
+++ b/src/DotArguments.Tests/DotArguments.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="TestContainers\ArgumentContainer4.cs" />
     <Compile Include="TestContainers\CorruptArgumentContainer9.cs" />
     <Compile Include="ArgumentParserTest.cs" />
+    <Compile Include="TestContainers\ArgumentContainer5.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TestContainers\" />
