--- a/src/DotArguments/DotArguments.csproj
+++ b/src/DotArguments/DotArguments.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="ContainerDefinition.cs" />
     <Compile Include="ContainerDefinitionException.cs" />
+    <Compile Include="ArgumentParserException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
