--- a/src/DotArguments.Demo/DotArguments.Demo.csproj
+++ b/src/DotArguments.Demo/DotArguments.Demo.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8836D5F7-DD21-4BE1-9562-7499D92644CB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>DotArguments</RootNamespace>
-    <AssemblyName>DotArguments</AssemblyName>
+    <ProjectGuid>{C44C224E-DDBA-4B21-B005-9C663E3DD060}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>DotArguments.Demo</RootNamespace>
+    <AssemblyName>DotArguments.Demo</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,7 +18,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -26,30 +26,22 @@
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Attributes\ArgumentAttribute.cs" />
-    <Compile Include="Attributes\NamedSwitchArgumentAttribute.cs" />
-    <Compile Include="Attributes\NamedValueArgumentAttribute.cs" />
-    <Compile Include="Attributes\PositionalArgumentAttribute.cs" />
-    <Compile Include="Attributes\PositionalValueArgumentAttribute.cs" />
-    <Compile Include="Attributes\RemainingArgumentsAttribute.cs" />
-    <Compile Include="Attributes\NamedArgumentAttribute.cs" />
-    <Compile Include="ArgumentParser.cs" />
-    <Compile Include="ContainerDefinition.cs" />
-    <Compile Include="ContainerDefinitionException.cs" />
-    <Compile Include="ArgumentParserException.cs" />
-    <Compile Include="Attributes\ArgumentDescriptionAttribute.cs" />
-    <Compile Include="ContainerDefinitionExtensions.cs" />
+    <Compile Include="DemoArguments.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="Attributes\" />
+    <ProjectReference Include="..\..\..\dotarguments\src\DotArguments\DotArguments.csproj">
+      <Project>{8836D5F7-DD21-4BE1-9562-7499D92644CB}</Project>
+      <Name>DotArguments</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
