Move exceptions into own namespace

--- a/src/DotArguments/DotArguments.csproj
+++ b/src/DotArguments/DotArguments.csproj
@@ -41,19 +41,20 @@
     <Compile Include="Attributes\PositionalValueArgumentAttribute.cs" />
     <Compile Include="Attributes\RemainingArgumentsAttribute.cs" />
     <Compile Include="Attributes\NamedArgumentAttribute.cs" />
-    <Compile Include="ArgumentParserException.cs" />
     <Compile Include="Attributes\ArgumentDescriptionAttribute.cs" />
     <Compile Include="ArgumentDefinition.cs" />
-    <Compile Include="ArgumentDefinitionException.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="CommandManager.cs" />
     <Compile Include="CommandAttribute.cs" />
-    <Compile Include="CommandManagerException.cs" />
     <Compile Include="IArgumentParser.cs" />
     <Compile Include="GNUArgumentParser.cs" />
+    <Compile Include="Exceptions\ArgumentDefinitionException.cs" />
+    <Compile Include="Exceptions\CommandManagerException.cs" />
+    <Compile Include="Exceptions\ArgumentParserException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Attributes\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
