--- a/src/DotArguments/DotArguments.csproj
+++ b/src/DotArguments/DotArguments.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Exceptions\ArgumentDefinitionException.cs" />
     <Compile Include="Exceptions\CommandManagerException.cs" />
     <Compile Include="Exceptions\ArgumentParserException.cs" />
+    <Compile Include="ArgumentParserBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
